@@ -55,7 +55,7 @@ public class P683SerialNumberChecker {
 
             //stop after n seconds if there's an argument
             if (args.length > 0) {
-                TimeUnit.SECONDS.sleep(new Integer(args[0]));
+                TimeUnit.SECONDS.sleep(Integer.valueOf(args[0]));
                 System.out.println("No duplicates detected.");
                 System.exit(0);
             }
